[WEB-465]: Use lower z-index value to prevent suggester overlap with filters

--- a/src/app/public/features/search/pages/search.component.scss
+++ b/src/app/public/features/search/pages/search.component.scss
@@ -5,6 +5,9 @@
     position: sticky;
     top: $topbar-height;
     z-index: $filters-bar-z-index;
+    &--opened {
+      z-index: #{$filters-bar-z-index + 1};
+    }
   }
 
   &__ad {
